[build-system]
build-backend = "cmeel.build"
requires = ["cmeel-boost", "cmeel-eigen", "cmeel[build]"]

[project]
dependencies = ["cmeel-boost", "cmeel-eigen"]
description = "C++ implementations of the algorithm of Goldfarb and Idnani for the solution of a (convex) QP"
license = "LGPL-3.0-or-later"
name = "eiquadprog"
version = "1.2.6"

[project.urls]
homepage = "https://github.com/stack-of-tasks/eiquadprog"

[tool.cmeel]
py3-none = true

[tool.tomlsort]
all = true
